--- a/projects/phase1-foundation/agent-concepts/examples/autonomy/package.json
+++ b/projects/phase1-foundation/agent-concepts/examples/autonomy/package.json
@@ -10,10 +10,15 @@
     "build": "tsc typescript-autonomous-agent.ts --outDir dist --target ES2020 --module commonjs --esModuleInterop",
     "run": "node dist/typescript-autonomous-agent.js"
   },
-  "keywords": ["agent", "autonomy", "typescript"],
+  "keywords": [
+    "agent",
+    "autonomy",
+    "typescript"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.32.0",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
